--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
 <style>
-body {background-color: powderblack; border: 1px solid powderblue;}
-h1   {color: black; border: 1px solid White;}
-p    {color: red; border: 1px solid red;}
-div  {background-color: blue; border: 1px solid darkgreen;}
+body {background-color: powderblack; border: 1px solid powderblack;}
+h1   {color: black; border: 1px solid black;}
+p    {color: green; border: 1px solid red;}
+div  {background-color: black; border: 1px solid darkgreen;}
 </style>
 </head>
 <body>
@@ -15,11 +15,11 @@ div  {background-color: blue; border: 1px solid darkgreen;}
 <h1>Witaj</h1>
 </div>
 <div id="paragraph">
-<p>Zasady:.</p>
-<p>My first paragraph.</p>
-<p>Witaj świecie</p>
+<p>Jest to mój pierwszy Qwiz</p>
+<p>Powodzenia</p>
+<p>Czy ryba ma nogi?</p>
 <br>
-<p>Witaj świecie 2</p>
+<p>Czy pająki mają paznokcie?</p>
 </div>
 
 </body>
