--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
 <meta charset="utf-8">
 <style>
 body {background-color: powderblack; border: 1px solid powderblack;}
-h1   {color: black; border: 1px solid black;}
-p    {color: green; border: 1px solid red;}
-div  {background-color: black; border: 1px solid darkgreen;}
+h1   {color: White; border: 1px solid purple;}
+p    {color: White; border: 1px solid purple;}
+div  {background-color: black; border: 1px solid purple;}
 </style>
 </head>
 <body>
 
 <div id="tytul">
-<h1>Witaj</h1>
+<h1> Witaj</h1>
 </div>
 <div id="paragraph">
-<p>Jest to mój pierwszy Qwiz</p>
-<p>Powodzenia</p>
-<p>Czy ryba ma nogi?</p>
+<p> Jest to mój pierwszy Qwiz</p>
 <br>
-<p>Czy pająki mają paznokcie?</p>
+<p> Powodzenia</p>
+<br>
+<p> Czy ryba ma nogi?</p>
+<br>
+<p> nie ma nóg</p>
+<br>
+<p> Czy pająki mają paznokcie?</p>
+<br>
+<p> tak mają paznokcie</p>
+<br>
+<p> Czy kólik sie poci?</p>
+<br>
+<p> nie, jedyne gróczołu potowe sa na ustach królika?</p> 
+<br>
+<p> Chloroplastr w jakiej komórce sie znajduje?</p> 
+<br>  
+<p> w roślinej</p>
 </div>
 
 </body>
