--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ div  {background-color: black; border: 1px solid purple;}
 <h1> Witaj</h1>
 </div>
 <div id="paragraph">
-<p> Jest to mój pierwszy Qwiz</p>
+<p> Jest to mój pierwszy Quiz</p>
 <br>
 <p> Powodzenia</p>
 <br>
